[gd_scene load_steps=5 format=3 uid="uid://dc53rxfbvn582"]

[ext_resource type="Texture2D" uid="uid://ch11xb0rdwxue" path="res://Assets/frames/hidden_frame_blank.png" id="1_7hbox"]
[ext_resource type="Texture2D" uid="uid://dh18wmit8ygie" path="res://Assets/frames/red_frame.png" id="2_nbmm2"]
[ext_resource type="Script" uid="uid://b3s3fbtkj0hmn" path="res://Scenes/memory_tile.gd" id="2_ra5w2"]
[ext_resource type="Texture2D" uid="uid://c03k7c5xjliof" path="res://Assets/glitch/admin_widget.png" id="3_ra5w2"]

[node name="MemoryTile" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture_normal = ExtResource("1_7hbox")
script = ExtResource("2_ra5w2")

[node name="FrameImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nbmm2")

[node name="ItemImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ra5w2")

[connection signal="pressed" from="." to="." method="_on_pressed"]
